[gd_scene load_steps=2 format=3 uid="uid://c50y4el0q5utw"]

[ext_resource type="Script" uid="uid://belhv5exi5o68" path="res://scenes/combat.gd" id="1_764e3"]

[node name="combat" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_764e3")

[node name="combatContent" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="combatLabel" type="RichTextLabel" parent="combatContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
bbcode_enabled = true
text = "combat started!"
fit_content = true
autowrap_mode = 0

[node name="combatFight" type="RichTextLabel" parent="combatContent"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "<fight>"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="combatRetreat" type="RichTextLabel" parent="combatContent"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "<retreat>"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
